project(ntv2dpxplayer)

message("added ntv2dpxplayer")

set(NTV2DPXPLAYER_TARGET_INCLUDE_DIRS
	${AJA_LIBRARIES_ROOT}
	${AJA_APPS_ROOT}/crossplatform/demoapps
	${AJA_LIB_NTV2_ROOT}/includes
	${AJA_LIB_RETAIL_ROOT}/includes
	${AJA_LIB_RETAIL_ROOT}/services)

set(NTV2DPXPLAYER_HEADERS
	ntv2dpxplayer.h)
set(NTV2DPXPLAYER_SOURCES
	ntv2dpxplayer.cpp
	main.cpp)

set(DEMO_APPS_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/../ntv2democommon.cpp)
set(DEMO_APPS_HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/../ntv2democommon.h)

if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
	# noop
elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
	find_library(FOUNDATION_FRAMEWORK Foundation)
	set(EXTRA_LIBRARIES ${FOUNDATION_FRAMEWORK})
elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
	set(EXTRA_LIBRARIES dl pthread rt)
endif()

set(NTV2DPXPLAYER_TARGET_SOURCES
	${NTV2DPXPLAYER_SOURCES}
	${NTV2DPXPLAYER_HEADERS}
	${DEMO_APPS_SOURCES}
	${DEMO_APPS_HEADERS})

add_executable(ntv2dpxplayer ${NTV2DPXPLAYER_TARGET_SOURCES})
add_dependencies(ntv2dpxplayer ajantv2)
target_include_directories(ntv2dpxplayer PUBLIC ${NTV2DPXPLAYER_TARGET_INCLUDE_DIRS})
target_link_libraries(ntv2dpxplayer PUBLIC ajantv2 ${EXTRA_LIBRARIES})

install(TARGETS ntv2dpxplayer
	ARCHIVE DESTINATION ${AJA_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${AJA_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${AJA_INSTALL_BINDIR}
	FRAMEWORK DESTINATION ${AJA_INSTALL_FRAMEWORKDIR})
